--- a/style.css
+++ b/style.css
@@ -5,13 +5,45 @@ body {
     min-height: 100vh;
 }
 
+p {
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.content {
+    flex: 1 0 auto;
+}
+
+.section1{
+    display: flex;
+    flex-direction: column;
+}
+.section3{
+    display: flex;
+    flex-direction: column;
+}
+.section4 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 50px 180px;
+    padding: 20px;
+    border-radius: 5px;
+    justify-content: space-around;
+}
 .header,
-.hero {
+.hero ,
+footer {
     background-color: #1f2937;
 }
 
-.header ul li a,
-.left-hero p{
+.header ul, li, a,
+footer {
     font-size: 18px;
     color: #e5e7eb;
 }
@@ -37,5 +69,55 @@ body {
 
 .header ul li a {
     text-decoration-line: none;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    padding:10px;
+}
+
+.section1 .hero .left-hero p {
+    color: #f9faf8;
+}
+
+.section1 .hero .left-hero h2{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
+
+
+
+
+
+
+.section4 .left {
+    display: flex;
+    flex-direction: column;
+}
+
+.section4 .left h2,
+.section4 .left p {
+    margin: 0px;
+    color: #f9faf8;
+}
+
+.section4 .right {
+    display: flex;
+    align-items: center;
+}
+
+.section4 .right button {
+    border-radius: 5px;
+    border: 2px solid #e5e7eb;
+}
+
+.section4,
+.section4 .right button {
+    background-color: #3882F6;
+    color: #f9faf8;
 }
 
