--- a/style.css
+++ b/style.css
@@ -23,9 +23,21 @@ h2 {
     display: flex;
     flex-direction: column;
 }
+
+.section2{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    padding: 30px;
+}
 .section3{
     display: flex;
     flex-direction: column;
+    background-color: #e5e7eb;
+    justify-content: center;
+    align-items: center;
+    padding: 80px;
 }
 .section4 {
     display: flex;
@@ -89,10 +101,84 @@ footer {
     color: #f9faf8;
 }
 
+.section1 .hero {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 50px;
+    padding: 50px 0px;
 
+}
 
+.section1 .hero .right-hero {
+    background-color: gray;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    padding: 80px;
+    
+}
 
+.section1 .hero .left-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 
+.section1 .hero .left-hero button {
+    background-color: #3882F6;
+    color: #f9faf8;
+    border-radius: 5px;
+    border: 2px solid #1f2937;
+    padding: 5px;
+}
+.section2 .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+
+}
+
+.section2 .title {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    padding-bottom:  20px;
+}
+
+.section2 .image .info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section2 .container .image .info img{
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    border: 2px solid #3882F6;
+}
+
+.section2 .container .image .info .text {
+    font-size: 13px;
+}
+.section3 .quote {
+    color: #1f2937;
+    font-weight: lighter;
+    font-style: italic;
+    font-size: 36px;
+}
+
+.section3 .signature {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 600px;
+    font-weight: 600;
+}
 
 .section4 .left {
     display: flex;
